# yomitoku-test

./: .envrc  .gitignore  README.md  flake.nix  justfile  pyproject.toml
output/: from_image.html  from_image.json  from_image.md  from_pdf_0.json  from_pdf_ocr_0.html  from_pdf_ocr_0.md
yomitoku_test/: main.py
